2007-04-04  Roman Kennke  <roman@kennke.org>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
	(init_glib_threads): Create global reference on lock object.

2007-04-04  Roman Kennke  <roman@kennke.org>

	* java/awt/Frame.java
	(weakFrames): Make private.
	(weakFramesQueue): New field. A reference queue to collect
	GCed references.
	(getFrames): Only do one iterations to avoid collecting null
	references.
	(hasDisplayableFrames): New helper method. Checks if there
	are any displayable frames. This is used by the event queue
	shutdown check.
	(noteFrame): Clean up GCed frames in the list.
	* java/awt/EventQueue.java
	(isShutdown): Move frame checking code into Frame.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* java/lang/System.java
	(inheritedChannel): New method, wraps
	SelectorProvider.inheritedChannel().
	* java/nio/channels/spi/SelectorProvider.java
	(inheritedChannel): New abstract method.
	* gnu/java/nio/SelectorProviderImpl.java
	(inheritedChannel): New method, return null as default.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* java/nio/ByteOrder.java
	(nativeByteOrder): Let this fail when the corresponding
	property is not set properly.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(getPathBounds): Consider the tree's insets. Added a bunch of
	null checks.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicLabelUI.java
	(cachedInsets): New field. Used for reusing the insets instance.
	(getFontMetrics): New helper method for fetching a suitable
	FontMetrics object.
	(getPreferredSize): Use new helper method for font metrics.
	(paint): Only do something if we have an icon or text.
	Use cached Insets instance and new font metrics helper.
	(paintDisabledText): Don't restore the graphics' color.
	(paintEnabledText): Don't restore the graphics' color.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalButtonUI.java