@@ -41,7 +41,6 @@ package gnu.java.nio;
 import gnu.classpath.SystemProperties;
 
 import java.io.IOException;
-import java.nio.channels.Channel;
 import java.nio.channels.DatagramChannel;
 import java.nio.channels.Pipe;
 import java.nio.channels.ServerSocketChannel;
@@ -119,12 +118,4 @@ public class SelectorProviderImpl extends SelectorProvider
     return new SocketChannelImpl (this);
   }
 
-  public Channel inheritedChannel() throws IOException
-  {
-    // Implementation note: The default implementation can't do much more
-    // than return null. If a VM can provide something more useful it should
-    // install its own SelectorProvider (maybe a subclass of this one) to
-    // return something more useful.
-    return null;
-  }
 }
